--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       var warningBanner = document.querySelector("#unity-warning");
 
       window.Telegram.WebApp.ready();
-
+      unityInstance.SetFullscreen(1);
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
       // If type=='warning', a yellow highlight color is used.
