--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
           progressBarFull.style.width = 100 * progress + "%";
               }).then((unityInstance) => {
                 loadingBar.style.display = "none";
-                unityInstance.SetFullscreen(1);
 
                 fullscreenButton.onclick = () => {
                   unityInstance.SetFullscreen(1);
                 };
+                
+                fullscreenButton.click();
               }).catch((message) => {
                 alert(message);
               });
