--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Unity WebGL Player | TelegramCounter</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas"  tabindex="-1" style="width: 98vw; height: 99vh; background: #231F20"></canvas>
+  <body style="width: 100vw; height: 100vh; text-align: center; padding: 0; border: 0; margin: 0;">
+    <canvas id="unity-canvas"  tabindex="-1" style="width: 100vw; height: 100vh; background: #231F20"></canvas>
     <script src="Build/Builds.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
