--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         document.getElementsByTagName('head')[0].appendChild(meta);
 
         var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
+        canvas.style.width = "100vw";
+        canvas.style.height = "100vh";
         canvas.style.position = "fixed";
 
         document.body.style.textAlign = "left";
@@ -32,8 +32,6 @@
         companyName: "IZZZIO",
         productName: "TelegramCounter",
         productVersion: "1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
       window.Telegram.WebApp.ready();
 
