--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | TelegramCounter</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style>
+      body { margin: 0; overflow: hidden; }
+      canvas { width: 100%; height: 100%; }
+    </style>
   </head>
-  <body style="width: 100vw; height: 100vh; text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas"  tabindex="-1" style="width: 100vw; height: 100vh; background: #231F20"></canvas>
+  <body >
+    <canvas id="unity-canvas" tabindex="-1"></canvas>
     <script src="Build/Builds.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -17,12 +21,6 @@
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
 
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
-
-        document.body.style.textAlign = "left";
       }
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Builds.data",
