--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Unity WebGL Player | TelegramCounter</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-      body { margin: 0; overflow: hidden; }
-      canvas { width: 100%; height: 100%; }
+      body {width: 100vw; height: 100vh; margin: 0; overflow: hidden; }
+      canvas { width: 100vw; height: 100vh; }
     </style>
   </head>
   <body >
@@ -21,15 +21,6 @@
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
       }
-
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build.json", {onProgress: UnityProgress});
-      
-      window.addEventListener("resize", function() {
-          var width = window.innerWidth;
-          var height = window.innerHeight;
-          unityInstance.SendMessage('DynamicWrap', 'SetResolution', width + ',' + height);
-      });
-
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Builds.data",
         frameworkUrl: "Build/Builds.framework.js",
@@ -40,7 +31,12 @@
         productVersion: "1.0",
       });
 
-      
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build.json", {onProgress: UnityProgress});
+      window.addEventListener("resize", function() {
+          var width = window.innerWidth;
+          var height = window.innerHeight;
+          unityInstance.SendMessage('DynamicWrap', 'SetResolution', width + ',' + height);
+      });
 
       window.Telegram.WebApp.ready();
 
