--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | TelegramCounter</title>
+    <title>Unity WebGL Player | PerfectHotel</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
       body {width: 100vw; height: 100vh; margin: 0; overflow: hidden; }
@@ -11,8 +11,8 @@
     </style>
   </head>
   <body >
-    <canvas id="unity-canvas" tabindex="-1"></canvas>
-    <script src="Build/Builds.loader.js"></script>
+    <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+    <script src="Build/builds.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -20,26 +20,27 @@
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
+
+        var canvas = document.querySelector("#unity-canvas");
+        canvas.style.width = "100%";
+        canvas.style.height = "100%";
+        canvas.style.position = "fixed";
+
+        document.body.style.textAlign = "left";
       }
+
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Builds.data",
-        frameworkUrl: "Build/Builds.framework.js",
-        codeUrl: "Build/Builds.wasm",
+        dataUrl: "Build/builds.data",
+        frameworkUrl: "Build/builds.framework.js",
+        codeUrl: "Build/builds.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "IZZZIO",
-        productName: "TelegramCounter",
-        productVersion: "1.0",
+        companyName: "Get Unity Code",
+        productName: "PerfectHotel",
+        productVersion: "1",
+        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
-
-      // var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build.json", {onProgress: UnityProgress});
-      // window.addEventListener("resize", function() {
-      //     var width = window.innerWidth;
-      //     var height = window.innerHeight;
-      //     unityInstance.SendMessage('DynamicWrap', 'SetResolution', width + ',' + height);
-      // });
-
       window.Telegram.WebApp.ready();
-
     </script>
   </body>
 </html>
